Bug 323067 - Right click on taskbar and use keyboard to close the window will crash plasma.
Summary: Right click on taskbar and use keyboard to close the window will crash plasma.
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-taskbar (other bugs)
Version First Reported In: 4.10.97
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-01 03:18 UTC by Weng Xuetian
Modified: 2013-09-03 17:12 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.1
Sentry Crash Report:


Attachments
drkonqi backtrace (5.03 KB, text/x-log)
2013-08-01 03:18 UTC, Weng Xuetian
Details
Another backtrace with more symbols (6.30 KB, text/plain)
2013-08-06 09:36 UTC, Juan Carlos Torres
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Weng Xuetian 2013-08-01 03:18:19 UTC
KDELibs 4.10.97
Qt 4.8.5

Reproducible: Always

Steps to Reproduce:
1. Right click on a item.
2. use keyboard to navigate to "Close"
3. Press enter
Actual Results:  
The menu shows again and then plasma crashes.

Expected Results:  
Menu doesn't show again and plasma doesn't crash.
Comment 1 Weng Xuetian 2013-08-01 03:18:58 UTC
Created attachment 81498 [details]
drkonqi backtrace

Backtrace
Comment 2 Eike Hein 2013-08-06 07:06:39 UTC
I can't reproduce this - do you have any more steps to reproduce to offer?
Comment 3 Juan Carlos Torres 2013-08-06 09:36:17 UTC
Created attachment 81580 [details]
Another backtrace with more symbols

Was able to reproduce it on my system as well.

Fedora 19, with kde-unstable
KDE Development Platform 4.10.97
Comment 4 Eike Hein 2013-08-20 17:58:55 UTC
Git commit 4d5bac5f2206f01742334ee457714348e3ad7b9a by Eike Hein.
Committed on 20/08/2013 at 17:53.
Pushed by hein into branch 'master'.

Ignore child event types we're not explicitly interested in.

MouseEventListener listens to both child events and events passing
through itself; child events are recorded so the handler for the
latter can perform a comparison and avoid emitting signals for the
same event again. However, this comparison could fail because the
member used to record the last child event would also be updated
for events we were not actually interested in.

A real-world example of this is opening a popup menu in repsonse to
a Press event. This causes an Ungrab event on the child, which would
cause the comparison to fail and mousePressEvent to announce the same
press yet again.

M  +4    -2    src/declarativeimports/qtextracomponents/mouseeventlistener.cpp

http://commits.kde.org/plasma-framework/4d5bac5f2206f01742334ee457714348e3ad7b9a
Comment 5 Eike Hein 2013-08-20 18:00:30 UTC
Git commit 98f86dc15f98ab27b7d70b66bb7c44d3c6ea5581 by Eike Hein.
Committed on 20/08/2013 at 17:59.
Pushed by hein into branch 'KDE/4.11'.

Ignore child event types we're not explicitly interested in.

MouseEventListener listens to both child events and events passing
through itself; child events are recorded so the handler for the
latter can perform a comparison and avoid emitting signals for the
same event again. However, this comparison could fail because the
member used to record the last child event would also be updated
for events we were not actually interested in.

A real-world example of this is opening a popup menu in repsonse to
a Press event. This causes an Ungrab event on the child, which would
cause the comparison to fail and mousePressEvent to announce the same
press yet again.

This is a backport from plasma-frameworks 4d5bac5f.

M  +4    -2    plasma/declarativeimports/qtextracomponents/mouseeventlistener.cpp

http://commits.kde.org/kde-runtime/98f86dc15f98ab27b7d70b66bb7c44d3c6ea5581
Comment 6 Christoph Feck 2013-08-21 22:54:10 UTC
This commit causes a regression (tested on today's master): To switch between tasks, I now have to double-click them, while previously a single quick was sufficient.
Comment 7 Eike Hein 2013-08-21 22:57:57 UTC
Hm, I can't reproduce this at all here ... could you try to figure out if you can narrow this down to any sort of setting?
Comment 8 Nicolas 2013-09-03 17:07:33 UTC
I am also affected by the double-click issue here. I really have to double-click (ie. the second click has to come within a short time), clicking twice with a larger time gap does not help. Very annoying..
Right click works as normal.
Comment 9 Eike Hein 2013-09-03 17:10:31 UTC
Unfortunately I absolutely cannot reproduce this here, and I tried tons of settings ... I had hoped Christoph might have more info, but maybe you do?
Comment 10 Eike Hein 2013-09-03 17:12:49 UTC
Let's move over to bug 324470 I'd say ...